--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,30 +19,36 @@
 </div>
 
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
+    <!-- ID Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let customer"> {{customer.id}} </td>
+    </ng-container>
+
+     <!-- Name Column -->
+     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let customer"> {{customer.first}} </td>
     </ng-container>
   
     <!-- Company Column -->
     <ng-container matColumnDef="company">
-      <th mat-header-cell *matHeaderCellDef> Company </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Company </th>
       <td mat-cell *matCellDef="let customer"> {{customer.company}} </td>
     </ng-container>
   
     <!-- Country Column -->
     <ng-container matColumnDef="country">
-      <th mat-header-cell *matHeaderCellDef> Country </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Country </th>
       <td mat-cell *matCellDef="let customer"> {{customer.country}} </td>
     </ng-container>
 
     <!-- Date Column -->
     <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Year </th>
-      <td mat-cell *matCellDef="let customer"> {{customer.created_at | date: 'yyyy'}} </td>
+      <th mat-header-cell *matHeaderCellDef> Date </th>
+      <td mat-cell *matCellDef="let customer"> {{customer.created_at | date: 'MMM dd, y'	}} </td>
     </ng-container>
   
     <!-- Email Column -->
