--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -6,5 +6,12 @@
     color: rosybrown;
     cursor: pointer;
 }
+.icon-eye{
+    color: rgb(80, 117, 190);
+    cursor: pointer;
+}
+.viewEmp{
+    cursor: pointer;
+}
 mat-paginator {
 background-color:wheat;  }
