--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand-sm">
+<nav class="navbar navbar-expand-sm">
     <div class="container">
-        <a routerLink="/" class="navbar-brand"><i class="fa fa-home"></i> Customer Management</a>
+        <a routerLink="/" class="navbar-brand"><i class="fa fa-home"></i> Employee Management System</a>
     </div>
 </nav>
