--- a/src/app/modals/delete-modal/delete-modal.component.html
+++ b/src/app/modals/delete-modal/delete-modal.component.html
@@ -7,7 +7,7 @@
             </mat-dialog-content>
             <mat-dialog-actions align="end" class="d-flex">
                 <button class="btn btn-dark float-right m-2" mat-button mat-dialog-close>Close</button>
-                <button (click)="deleteCustomer()" class="btn btn-danger float-right" mat-button><i class="fa fa-trash"></i> Delete</button>
+                <button (click)="deleteEmployee()" class="btn btn-danger float-right" mat-button><i class="fa fa-trash"></i> Delete</button>
             </mat-dialog-actions>
         </div>
     </div>
