--- a/src/app/modals/delete-modal/delete-modal.component.html
+++ b/src/app/modals/delete-modal/delete-modal.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h2 mat-dialog-title class="mat-dialog-title">Customer Delete Box</h2>
+            <h2 mat-dialog-title class="mat-dialog-title">Employee Delete Box</h2>
             <mat-dialog-content>
                 <p class="text-danger">{{data.message}}</p>
             </mat-dialog-content>
