--- a/src/app/components/view-employee/view-employee.component.html
+++ b/src/app/components/view-employee/view-employee.component.html
@@ -2,7 +2,7 @@
 <div class="container mt-3">
     <div class="row">
         <div class="col">
-            <p class="h5 fw-bold text-danger">View Employee</p>
+            <p class="h5 fw-bold text-danger">View Employee Details</p>
         </div>
     </div>
 </div>
